Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

11-Jul-2010 Jean-Marie Simonet
 # [#21366] * Checkin featured articles fails.
 # [#21365] Search manager - global options. Thanks Bill. + some string consolidation

09-Jul-2010 Jean-Marie Simonet
 $ Correcting strings

09-Jul-2010 Jean-Marie Simonet
 # [#21351] mod_login (Thanks Angie) + mod_languages html
 # [#21292] Images inserted into articles always go to the top in Firefox. Thanks Brad

08-Jul-2010 Mark Dexter
# Fixes to beez and beez5 templates (Angie Radtke)

08-Jul-2010 Jean-Marie Simonet
 # [#21341] Tinymce has a comma error in JS. Thanks Janich.
 # [#21290] Extension Manager: Manage Message. Thanks Matt.
 # [#21330] Com_contact Patch. Thanks Angie.
 ^ [#21266] Clean up code for removal of Uncategorised content
 # [#21333] com_languages views with wrong id on filter
 
07-Jul-2010 Jean-Marie Simonet
 $ [#21313] String in Banner.ini. Thanks Joseph.
 #$ [#21325] Ordering parameter in frontend edit doesn't make sense
 
06-Jul-2010 Andrew Eddie
 # [#20926] Fields in jos_user_profile not removed when user is deleted (Boris Baddenoff, Omar Ramos).

05-Jul-2010 Mark Dexter
 # Sample data - assets table, uncategorised issues (Elin Waring)
 # [#21117] Save Order button doesn't work in Menu Manager:Menu Items

05-Jul-2010 Jean-Marie Simonet
 #$ [#21307] Customising date format missing
 # Wrong class for date fields in redirect xml

05-Jul-2010 Ian MacLennan
 # [#21299] Typo in page cache controller

04-Jul-2010 Jean-Marie Simonet
 $ [#21304] More user friendly strings for multilanguage aspects
 # [#21245] Global parameters for single contact--Showing Contact list makes links not show. Thanks Elin.
 # [#21273] Incorrect date format being used during INSERTs to Redirect table when 404 occurs. Thanks CY Lee

03-Jul-2010 Jean-Marie Simonet